--- a/assets/style/_var.scss
+++ b/assets/style/_var.scss
@@ -17,6 +17,7 @@ $--font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB',
   'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
 $--font-size: 16px;
 $--word-spacing: 1px;
+$--font-size-code: 0.92rem;
 
 // 高度
 $--height-header: 60px;
