--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -12,6 +12,7 @@ html {
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
   color: $--color-text;
+  touch-action: pan-y;
 }
 
 *,
